--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
+            <li><span>About</span></li>
             <li><span>Packages</span></li>
             <li><span>Destinations</span></li>
             <li><span>Contact</span></li>
@@ -72,6 +73,21 @@
                   <h3>Great Customer Support</h3>
                   <p>Our experienced travel planning team helps us manage your holidays with luxury.</p>
                 </a>
+              </div>
+            </div>
+          </li>
+          <li class="l-section section">
+            <div class="about">
+              <div class="about--banner">
+                <h2>About Us</h2>
+                <p>Are you on the lookout for a perfect holiday?? You are at the right place ... Just ping us and have maximum
+                  comfort guaranteed.</p>
+                <p>We Foxy holidays, which has become one of Kerala’s leading tour planners within a short span of time. Our
+                  clients are our kings and your satisfaction is our achievement.</p>
+                <p>We take pride in providing professional services and ensure special care to our customers. Our consultants can
+                  help you to organize highly economical and thoroughly enjoyable holidays. Our staff is our key to success. We
+                  have well qualified and trained staffs that are always ready to cater to our clients' needs. Their service will
+                  surely make your holiday with Foxy holidays a one in a million experience.</p>
               </div>
             </div>
           </li>
@@ -144,7 +160,6 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/about-visual.png" alt="About Us">
               </div>
               <div class="about--options">
                 <a href="#0">
@@ -172,8 +187,8 @@
                     <a href="tel:+148126287560">+48 12 628 75 60</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
-                    <li><a href="#0">dribbble</a></li>
+                    <li><a href="#0">Facebook</a></li>
+                    <li><a href="#0">Twitter</a></li>
                     <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
                   </ul>
                 </div>
@@ -183,7 +198,6 @@
           <li class="l-section section">
             <div class="hire">
               <h2>You want us to do</h2>
-              <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
                   <span class="options-a">
@@ -195,7 +209,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      App Design
+                      Air Tickets
                     </label>
                     <input id="opt-2" type="checkbox" value="graphic design">
                     <label for="opt-2">
@@ -205,7 +219,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Graphic Design
+                      Tour Packages
                     </label>
                     <input id="opt-3" type="checkbox" value="motion design">
                     <label for="opt-3">
@@ -215,7 +229,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Motion Design
+                      Train Tickets
                     </label>
                   </span>
                   <span class="options-b">
@@ -227,7 +241,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      UX Design
+                      Bus Tickets
                     </label>
                     <input id="opt-5" type="checkbox" value="webdesign">
                     <label for="opt-5">
@@ -237,7 +251,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Webdesign
+                      Passport Services
                     </label>
                     <input id="opt-6" type="checkbox" value="marketing">
                     <label for="opt-6">
@@ -247,7 +261,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Marketing
+                      Visa Assistance
                     </label>
                   </span>
                 </div>
@@ -271,6 +285,7 @@
   </div>
   <ul class="outer-nav">
     <li class="is-active">Home</li>
+    <li>About</li>
     <li>Packages</li>
     <li>Destinations</li>
     <li>Contact</li>
